# video-privacy-blur

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/privacy_blur/: blur_ops.py  cli.py  detectors.py  utils.py
